# learn-fastapi

./: .pre-commit-config.yaml  README.md  api.py  conftest.py  database.py  domain.py  exceptions.py  main.py  model.py  pyproject.toml  service.py  test_main.py
.github/: PULL_REQUEST_TEMPLATE.md
