[tool.poetry]
name = "learn-fastapi"
version = "0.1.0"
description = ""
authors = ["Sungchul Park <sungchul.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "learn_fastapi"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlmodel = "^0.0.8"
httpx = "^0.24.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.2.1"
pycln = "^2.1.3"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
skip-magic-trailing-comma = true

[tool.isort]
line_length = 99
profile = "black"
skip_gitignore = true

[tool.pycln]
all = true